Fixed the jumping of arrows on the slider

--- a/css/main.less
+++ b/css/main.less
@@ -522,19 +522,9 @@ header.navbar div.navbar-inner{
   background: url(../img/arrows.png) no-repeat bottom left;
 }
 
-.liquid-slider-wrapper .liquid-nav-left-arrow:active {
-  /* Left graphical arrows click */
-  margin-top: 18px;
-}
-
 .liquid-slider-wrapper .liquid-nav-right-arrow:hover {
   /* Right graphical arrows hover */
   background: url(../img/arrows.png) no-repeat bottom right;
-}
-
-.liquid-slider-wrapper .liquid-nav-right-arrow:active {
-  /* Right graphical arrows click */
-  margin-top: 18px;
 }
 
 .arrows .liquid-slider {
